Added block activator
Will right click blocks on redstone signal.
Will attempt to use inventory behind the front face when right clicking.

Fixed a crash when buildcraft isn't loaded.
Updated the version to 1.1

--- a/src/main/resources/assets/burptweaks/lang/en_US.lang
+++ b/src/main/resources/assets/burptweaks/lang/en_US.lang
@@ -1,5 +1,9 @@
 item.PipeItemsInsertion.name=Insertion Pipe
+item.activator.name=Activator
 
 block.PipeItemsInsertion.name=Insertion Pipe
+block.activator.name=Activator
+
+tile.activator.name=Activator
 
 tip.PipeItemsInsertion=Attempts to put items in an inventory.\nWill continue down pipes or bounce.
